# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rlmoadll_bl"
version = "0.1.0"
edition = "2024"

[lib]
name = "toml_config"
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'     # 优化大小
panic = 'abort'     # 在 panic 时中止
lto = true          # 启用链接时优化
strip = true        # 剥离符号(需要 Rust 1.59+)
codegen-units = 1   # 减少代码生成单元以增加优化

[dependencies]
axum = "0.8.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
get_if_addrs = "0.5.3"
toml = "0.9.8"
pyo3 = { version = "0.27.1", features = ["auto-initialize"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
hex = "0.4"
lazy_static = "1.4"
