[package]
name = "lmoadll_admin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }

# Authentication
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
argon2 = "0.5"

# Configuration
dotenv = "0.15"
config = "0.13"

# Utilities
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
hyper = { version = "1.8.1", features = ["client"] }
http-body-util = "0.1.3"
reqwest = "0.12.25"

[profile.release]
opt-level = 'z'     # 优化大小
panic = 'abort'     # 在 panic 时中止
lto = true          # 启用链接时优化
strip = true        # 剥离符号(需要 Rust 1.59+)
codegen-units = 1   # 减少代码生成单元以增加优化
